Control de autorizacion en las rutas

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
 // TODO Envios de correos
 // TODO Datos reales de mis cuentas
-// TODO Middleware
 
 // TODO recuperar contraseña
 // TODO Tope en ventas para cada sorteo
 // TODO input fecha compatible en resultados
 // TODO Agregar numero de referencia al aprobar retiros
 // TODO Capturas de pantalla en depositos y retiros
+// TODO notificaciones
