--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 // TODO Envios de correos
 // TODO Datos reales de mis cuentas
+// TODO Reportes
 
 // TODO recuperar contraseña
-// TODO Tope en ventas para cada sorteo
 // TODO notificaciones
